# claudewatch

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  mac-ci.yml  release.yml
backend/: cli.py  config.py  doctor.py  models.py  notifications.py  permissions.py  pricing.py  server.py  state.py
backend/api/: actions.py  admin.py  budgets.py  config_api.py  files.py  forecast.py  health.py  history.py  insights.py  metrics.py  sessions.py  stream.py
backend/applescript/: focus_by_tty.applescript  focus_iterm.applescript  list_iterm_sessions.applescript  new_iterm_tab.applescript  new_iterm_window.applescript
backend/detectors/: conversation_log.py  filesystem_watch.py  git_context.py  iterm_applescript.py  iterm_detector.py  linker.py  process_detector.py  timeline.py  tmux_detector.py
docs/: api-reference.md  appcast.xml  architecture.md  conversation-log-format.md  permissions-setup.md  troubleshooting.md
docs/superpowers/plans/: 2026-05-12-claudewatch.md
docs/superpowers/specs/: 2026-05-12-claudewatch-design.md
frontend/: app.js  index.html  package.json  styles.css  theme-bootstrap.js  vitest.config.mjs
frontend/tests/: budgets.test.js  files-tab.test.js  filter-and-sort.test.js  forecast.test.js  formatters.test.js  history-and-projects.test.js  hourly-cost.test.js  insights-loaders.test.js  metrics.test.js  observability.test.js  search-debouncing.test.js  settings-draft.test.js  status-tab.test.js  theme.test.js  tile-view.test.js  timeline.test.js
mac/: .gitignore  Info.plist  Makefile  Package.swift  README.md
mac/Resources/: AppIcon.icns
mac/Sources/ClaudeWatchTray/: APIClient.swift  AppViewModel.swift  ClaudeWatchTrayApp.swift  Models.swift  PythonRunner.swift
mac/Tests/ClaudeWatchTrayTests/: APIClientTests.swift  ChatMarkdownTests.swift  ChatViewModelTests.swift  InfoPlistTests.swift  ModelsTests.swift  PythonRunnerArchTests.swift  PythonRunnerTests.swift  UpdateManagerTests.swift  (+2 more)
mac/docs/: code-signing.md  sparkle-setup.md
mac/scripts/: bundle-backend.sh  download-python.sh  make-dmg.sh  make-icon.sh  render-icon.swift  sign-and-notarize.sh
scripts/: install.sh  launchd.plist  start.sh  stop.sh  uninstall.sh
tests/: test_admin.py  test_api.py  test_benchmarks.py  test_budgets.py  test_cli_helpers.py  test_config_security.py  test_conversation_log.py  test_current_task.py  test_doctor.py  test_e2e_smoke.py  test_files_api.py  test_forecast.py  test_hourly_cost.py  test_insights.py  test_iterm_manager.py  test_linker.py  test_metrics.py  test_models.py  test_notifications.py  test_pricing.py  test_process_detector.py  test_sanitization.py  test_scheduler_diff.py  test_server_safety.py  test_server_security.py  test_session_detection.py  test_state.py  test_stream.py  test_timeline.py  test_token_aggregation.py
tests/fixtures/: multi_assistant.jsonl  sample_log.jsonl
(+14 files in other folders)
