[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudewatch"
version = "0.2.0"
description = "Local system-wide Claude Code session monitor for macOS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Omer Yasir Onal" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "psutil>=7.2.2",
  "iterm2>=2.19",
  "watchfiles>=1.1.1",
  "GitPython>=3.1.50",
  "aiosqlite>=0.20",
  "tomli-w>=1.2.0",
  "tomli>=2.0; python_version < '3.11'",
  "pydantic>=2.10",
  "rich>=13.9",
  "typer>=0.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-timeout>=2.3",
  "httpx>=0.28",
  "ruff==0.15.13",
]

[project.scripts]
claudewatch = "backend.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# Conservative defaults — match current codebase style. Expand as we clean up.
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
  "E501",  # line length (covered by formatter)
  "B008",  # function-call-in-default (FastAPI Depends, typer.Option)
  "B904",  # raise ... from err (verbose, low-value here)
  "UP006", # PEP 585 generics — keep `List[X]` style optional
  "UP007", # use `X | Y` — already done where it matters
  "UP017", # `datetime.UTC` is 3.11+; we still support 3.10 (Issue #26)
]

[tool.ruff.format]
quote-style = "double"
